--- a/meetingUi/views/pages/myindex.ejs
+++ b/meetingUi/views/pages/myindex.ejs
@@ -34,7 +34,7 @@
 
 		<!-- HEADER AND TODO COUNT -->
 		<div class="jumbotron text-center">
-			<h1>Meeting actions! <span class="label label-info">{{ todos.length }}</span></h1>
+			<h1>Meeting actions! v2<span class="label label-info">{{ todos.length }}</span></h1>
 		</div>
 
 		<!-- TODO LIST -->
